refact on style

--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
   <title>Matrix</title>
 </head>
 <body>
-  <div id="title" hidden>
-    <h1>THE MATRIX</h1>
-  </div>
-
-  <div id="matrixCanva"></div>
+  <div id="matrix">  </div>
 
   <script src="matrix.js"></script>
 </body>
