--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="./styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Matrix</title>
+  <link href="./styles.css" rel="stylesheet" >
 </head>
 <body>
-  <div id="matrix">  </div>
+  <!-- <canvas id="canvas" width="10" height="10" ></canvas> -->
+  <canvas id="canvas"></canvas>
 
-  <script src="matrix.js"></script>
+  <script src="./matrix.js"></script>
+  <!-- <script src="./tutorials/drawing-shapes.js"></script> -->
 </body>
 </html>
