--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 
   <script src="./matrix.js"></script>
   <!-- <script src="./tutorials/drawing-shapes.js"></script> -->
+  <!-- <script src="./tutorials/paint.js"></script> -->
 </body>
 </html>
